--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
+# General
+.DS_Store
+*.swp
+*.swo
+*~
+
+# Development environment
+.env
+.env.*
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
